--- a/index.css
+++ b/index.css
@@ -93,6 +93,12 @@ p, li {
   color: #333;
 }
 
+.download{
+  margin-top:40px;
+  margin-bottom:0px;
+  text-align:center;
+}
+
 @media print {
   body {
       background-color: #ffffff; 
@@ -103,6 +109,10 @@ p, li {
   .container {
       width: auto; 
       display: block; 
+  }
+
+  .download{
+    display:none;
   }
 
   .resume {
